# simplestream-factory

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/api/: base.py
app/api/middlewares/: db.py  services.py
app/api/static/: __init__.py  root.py
app/api/v1/: __init__.py
app/api/v1/handlers/: hello.py  root.py  simplestream_manifest.py  simplestream_product.py  simplestream_source.py
app/api/v1/models/requests/: base.py  hello.py  simplestream_manifest.py  simplestream_source.py
app/api/v1/models/responses/: hello.py  simplestream_product.py  simplestream_source.py
app/db/: base.py
app/db/alembic/: __init__.py  alembic.ini  env.py
app/db/alembic/versions/: 0001_initial.py  0002_source_channels.py  0003_manifest_selections.py
app/models/: base.py  entities.py
app/services/: base.py  collection.py  hello.py  simplestream_manifest.py  simplestream_product.py  simplestream_productversion.py  simplestream_source.py
app/simplestream/: models.py  parser.py
daemon/: simplestreamfactory.service  spaghettihub.nginx
frontend/: package-lock.json  package.json  tailwind.config.js  tutorial.txt
frontend/src/: App.tsx  ProductSelector.tsx
scripts/: format.sh  run.sh
